# engine-design-lib

./: .gitignore  CMakeLists.txt  README.md  main.c
.python/: cli_debug.py  design_func.py  resistencia_materiales.py
include/: DLLDefines.h  TSEL.h  comp_area.h  comp_tiempo.h  design_constants.h  design_func.h  design_resist.h  engine.h  rendimientos.h  structs.h  val_termod.h
src/: comp_area.c  comp_tiempo.c  design_func.c  design_resist.c  engine.c  rendimientos.c  val_termod.c
src/C/: cli_debug.c  design_constants.h  design_func.c  design_func.h  engine.c  engine.h
src/Rendimientos/: CMakeLists.txt
src/Rendimientos/Rendimientos/: CMakeLists.txt  Rendimientos.c  comp_area.c  comp_tiempo.h  design_constants.h
